--- a/.github/workflows/build-and-push-images.yml
+++ b/.github/workflows/build-and-push-images.yml
@@ -2,7 +2,7 @@ name: build and push images
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
 
 jobs:
   build-and-push-image:
@@ -11,11 +11,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - { postgres: 10, alpine: '3.8'  }
-          - { postgres: 11, alpine: '3.10' }
-          - { postgres: 12, alpine: '3.12' }
-          - { postgres: 13, alpine: '3.14' }
-          - { postgres: 14, alpine: '3.15' }
+          - { postgres: 10, alpine: "3.8" }
+          - { postgres: 11, alpine: "3.10" }
+          - { postgres: 12, alpine: "3.12" }
+          - { postgres: 13, alpine: "3.14" }
+          - { postgres: 14, alpine: "3.15" }
 
     steps:
       - name: Checkout repository
@@ -34,14 +34,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,event=branch,value=${{ matrix.alpine }}
+            type=sha,prefix=${{ matrix.alpine }}
+            type=ref,prefix=${{ matrix.alpine }},suffix=,event=branch
+
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ matrix.postgres }}
+          tags: ${{ steps.meta.outputs.tags }}
           build-args: |
             ALPINE_VERSION=${{ matrix.alpine }}
+          labels: ${{ steps.meta.outputs.labels }}
           platforms: |
             linux/amd64
             linux/arm64
