--- a/.github/workflows/build-and-push-images.yml
+++ b/.github/workflows/build-and-push-images.yml
@@ -2,7 +2,6 @@ name: build and push images
 
 on:
   push:
-    branches: ["main"]
 
 jobs:
   build-and-push-image:
@@ -10,12 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        include:
-          - { postgres: 10, alpine: "3.8" }
-          - { postgres: 11, alpine: "3.10" }
-          - { postgres: 12, alpine: "3.12" }
-          - { postgres: 13, alpine: "3.14" }
-          - { postgres: 14, alpine: "3.15" }
+        postgres: [10, 11, 12, 13]
 
     steps:
       - name: Checkout repository
@@ -40,7 +34,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,event=branch,value=${{ matrix.postgres }}
+            type=raw,event=branch,value=${{ matrix.postgres }},enable=${{ github.ref == 'refs/heads/main' }}
             type=sha,prefix=${{ matrix.postgres }}-
             type=ref,prefix=${{ matrix.postgres }}-,suffix=,event=branch
 
@@ -51,7 +45,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           build-args: |
-            ALPINE_VERSION=${{ matrix.alpine }}
+            POSTGRES_VERSION=${{ matrix.postgres }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: |
             linux/amd64
